No good dooky boat controls
Simko bol kontaktovany, may he have mercy on my soul.

--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -78,8 +78,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+AxisMappings=(AxisName="RudderControls",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="RudderControls",Scale=1.000000,Key=D)
++ActionMappings=(ActionName="Rudder Controls",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Rudder Controls",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
