--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -80,6 +80,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Rudder Controls",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="Rudder Controls",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++AxisMappings=(AxisName="Rudder Axis",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Rudder Axis",Scale=-1.000000,Key=D)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
