Added comments, light refactoring, debating the swapping the wooden planks
Code should now be more efficient and legible

--- a/Unreal Engine/Sailing/Config/DefaultInput.ini
+++ b/Unreal Engine/Sailing/Config/DefaultInput.ini
@@ -78,10 +78,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Rudder Controls",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
-+ActionMappings=(ActionName="Rudder Controls",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +AxisMappings=(AxisName="Rudder Axis",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Rudder Axis",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="Sail Tension Axis",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Sail Tension Axis",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
