--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -132,6 +132,8 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=156)
+NewWindowWidth=1316
+NewWindowHeight=960
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentScalingGridSize=5
@@ -170,8 +172,8 @@ MRUItem0=/Game/Levels/LVTesting
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -368,9 +370,13 @@ GameplayDebuggerUserSettings=EnhancedInputDeveloperSettings.Modifier Default Val
 GameplayTagsDeveloperSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis
 LogVisualizerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis
 StaticMeshActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
-RegattaUI_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
+RegattaUI_C=
 BPRegattaController_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_GetInputAxisValue=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
+K2Node_InputAxisEvent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
+K2Node_CallFunction=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
+K2Node_FunctionResult=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
+Rudder Angle To Turning Slider Pct=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 
 [EditorStartup]
 LastLevel=/Game/Levels/LVTesting
@@ -597,14 +603,15 @@ MaterialExpressionTextureCoordinate="\"Object\" "
 MaterialExpressionAppendVector="\"Object\" "
 MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionComment="\"Object\" "
-CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
+CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
-ProgressBar="\"Object\" "
+ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.BackgroundImage.OutlineSettings\" \"Object.Appearance.FillColorAndOpacity\" "
 EdGraphNode_Comment="\"Object\" "
 RegattaUI_C="\"Object\" "
 UserWidget="\"Object\" "
+RadialSlider="\"Object\" \"Object.Appearance.SliderProgressColor\" \"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1508,19 +1515,43 @@ ProgressBar.Localization=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 K2Node_VariableSet.Events=True
+BPRegattaController_C.Default=True
+RegattaUI_C.Appearance=True
+RegattaUI_C.Input=True
+RegattaUI_C.Interaction=True
+RegattaUI_C.Designer=True
+RegattaUI_C.Performance=True
+RegattaUI_C.Layout=True
+RegattaUI_C.Behavior=True
+RegattaUI_C.Render Transform=True
+RegattaUI_C.Localization=True
+RegattaUI_C.Accessibility=True
+RegattaUI_C.Rendering=True
+RegattaUI_C.Navigation=True
+RadialSlider.Layout=True
+RadialSlider.Appearance=True
+RadialSlider.Style=True
+RadialSlider.Accessibility=True
+RadialSlider.Interaction=True
+RadialSlider.Behavior=True
+RadialSlider.Render Transform=True
+RadialSlider.Performance=True
+RadialSlider.Rendering=True
+RadialSlider.Navigation=True
+RadialSlider.Localization=True
+RadialSlider.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Blueprints/Regatta/Textures/RedPlastic.RedPlastic
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
 OpenAssetsAtExit=/Game/Blueprints/Regatta/RegattaUI.RegattaUI
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
@@ -1584,13 +1615,13 @@ GlobalAssetPicker.ThumbnailSize=2
 GlobalAssetPicker.CurrentViewType=0
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem1=/Game/Blueprints/Regatta/RegattaUI
-MRUItem2=/Game/Levels/LVTesting
-MRUItem3=/Game/Blueprints/Regatta/Textures/RedPlastic
-MRUItem4=/Game/Blueprints/Regatta/BPRegatta
-MRUItem5=/Game/Blueprints/Regatta/Textures/WoodenPlanks/WoodenPlanks
-MRUItem6=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem0=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem1=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem2=/Game/Blueprints/Regatta/RegattaUI
+MRUItem3=/Game/Blueprints/Regatta/BPRegatta
+MRUItem4=/Game/Blueprints/Regatta/Textures/RedPlastic
+MRUItem5=/Game/Levels/LVTesting
+MRUItem6=/Game/Blueprints/Regatta/Textures/WoodenPlanks/WoodenPlanks
 MRUItem7=/Game/Assets/MWaterPlaceholder
 
 [PlacementMode]
@@ -1618,7 +1649,7 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 /Game/Blueprints/Regatta/RegattaUI.RegattaUI=0
 
 [MaterialEditor]
-PrimType=2
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=0
@@ -1789,6 +1820,7 @@ PlayerStart.Actor=True
 StaticMeshActor.Collision=True
 BPRegatta_C.Actor=True
 BPRegatta_C.Replication=True
+WorldSettings.Lightmass=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1849,7 +1881,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=0.667 Y=0.667
-WindowSize=X=1276.000 Y=668.000
+WindowSize=X=1274.667 Y=666.667
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -3076,20 +3108,19 @@ Materials_LastSelectedPipeline=InterchangeGenericMaterialPipeline
 Results=None
 
 [WidgetTemplatesExpanded]
-Common=False
 Audio=False
 Editor=False
 Input=False
-Lists=False
-Misc=False
-Optimization=False
-Panel=False
-Primitive=False
-Special Effects=False
-Synth=False
-Uncategorized=False
+Lists=True
+Misc=True
+Optimization=True
+Panel=True
+Primitive=True
+Special Effects=True
+Synth=True
+Uncategorized=True
 User Created=False
-Advanced=False
+Advanced=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
