--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=3
+PreviewFeatureLevel=4
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -132,8 +132,8 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=156)
-NewWindowWidth=1316
-NewWindowHeight=960
+NewWindowWidth=1319
+NewWindowHeight=980
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentScalingGridSize=5
@@ -173,7 +173,6 @@ MRUItem0=/Game/Levels/LVTesting
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -377,6 +376,7 @@ K2Node_InputAxisEvent=StaticMeshComponent.Collision.Collision,BoxComponent.Colli
 K2Node_CallFunction=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_FunctionResult=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 Rudder Angle To Turning Slider Pct=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
+SceneCaptureComponent2D=SceneCaptureComponent2D.PostProcessVolume.Lens,SceneCaptureComponent2D.PostProcessVolume.Lens|Mobile Depth of Field,SceneCaptureComponent2D.PostProcessVolume.Lens|Mobile Depth of FieldAdvanced,SceneCaptureComponent2D.PostProcessVolume.Lens|Bloom,SceneCaptureComponent2D.PostProcessVolume.Lens|BloomAdvanced,SceneCaptureComponent2D.PostProcessVolume.Lens|Chromatic Aberration,SceneCaptureComponent2D.PostProcessVolume.Lens|Camera,SceneCaptureComponent2D.PostProcessVolume.Lens|Lens Flares,SceneCaptureComponent2D.PostProcessVolume.Lens|Image Effects,SceneCaptureComponent2D.PostProcessVolume.Lens|Exposure,SceneCaptureComponent2D.PostProcessVolume.Lens|Dirt Mask,SceneCaptureComponent2D.PostProcessVolume.Rendering Features,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Motion Blur,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ray Tracing Translucency,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ray Tracing Ambient Occlusion,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient Cubemap,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient Occlusion,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Ambient OcclusionAdvanced,SceneCaptureComponent2D.PostProcessVolume.Rendering Features|Translucency,SceneCaptureComponent2D.PostProcessVolume.Reflections,SceneCaptureComponent2D.PostProcessVolume.Reflections|Screen Space Reflections,SceneCaptureComponent2D.PostProcessVolume.Path Tracing,SceneCaptureComponent2D.PostProcessVolume.Path Tracing|Lighting Components,SceneCaptureComponent2D.PostProcessVolume.Color Grading,SceneCaptureComponent2D.PostProcessVolume.Color Grading|Temperature,SceneCaptureComponent2D.PostProcessVolume.Color Grading|Misc,SceneCaptureComponent2D.PostProcessVolume.Film,SceneCaptureComponent2D.PostProcessVolume.Film Grain,SceneCaptureComponent2D.PostProcessVolume.Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Global Illumination|Lumen Global Illumination,SceneCaptureComponent2D.PostProcessVolume.Global Illumination|Lumen Global IlluminationAdvanced,SceneCaptureComponent2D.SceneCapture.General Show Flags,SceneCaptureComponent2D.SceneCapture.Advanced Show Flags,SceneCaptureComponent2D.SceneCapture.Lighting Features Show Flags,SceneCaptureComponent2D.SceneCapture.Nanite Show Flags
 
 [EditorStartup]
 LastLevel=/Game/Levels/LVTesting
@@ -605,13 +605,26 @@ MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionComment="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.BackgroundImage.OutlineSettings\" \"Object.Appearance.FillColorAndOpacity\" "
 EdGraphNode_Comment="\"Object\" "
 RegattaUI_C="\"Object\" "
 UserWidget="\"Object\" "
 RadialSlider="\"Object\" \"Object.Appearance.SliderProgressColor\" \"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
+SpringArmComponent="\"Object\" "
+SceneCaptureComponent2D="\"Object\" "
+SceneCaptureComponent="\"Object\" "
+TextureRenderTarget2D="\"Object\" "
+TextureRenderTarget="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
+PaperSpriteComponent="\"Object\" "
+Texture2D="\"Object\" "
+PaperSprite="\"Object\" "
+BodySetup="\"Object\" "
+BodySetupCore="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1540,10 +1553,91 @@ RadialSlider.Rendering=True
 RadialSlider.Navigation=True
 RadialSlider.Localization=True
 RadialSlider.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+SceneCaptureComponent2D.Variable=True
+SceneCaptureComponent2D.TransformCommon=True
+SceneCaptureComponent2D.Sockets=True
+SceneCaptureComponent2D.Projection=True
+SceneCaptureComponent2D.PostProcessVolume=True
+SceneCaptureComponent2D.ComponentTick=True
+SceneCaptureComponent2D.SceneCapture=True
+SceneCaptureComponent2D.Rendering=True
+SceneCaptureComponent2D.Tags=True
+SceneCaptureComponent2D.ComponentReplication=True
+SceneCaptureComponent2D.Activation=True
+SceneCaptureComponent2D.Cooking=True
+SceneCaptureComponent2D.Events=True
+SceneCaptureComponent2D.PlanarReflection=True
+SceneCaptureComponent2D.Replication=True
+TextureRenderTarget2D.LevelOfDetail=True
+TextureRenderTarget2D.TextureRenderTarget2D=True
+TextureRenderTarget2D.TextureRenderTarget=True
+TextureRenderTarget2D.File Path=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.ComponentTick=True
+PaperSpriteComponent.HLOD=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Navigation=True
+PaperSpriteComponent.VirtualTexture=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.LOD=True
+PaperSpriteComponent.TextureStreaming=True
+PaperSpriteComponent.Mobile=True
+PaperSpriteComponent.Replication=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange =True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=SpriteEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1553,8 +1647,7 @@ RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegatta.BPRegatta
-OpenAssetsAtExit=/Game/Blueprints/Regatta/RegattaUI.RegattaUI
-OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
+OpenAssetsAtExit=/Game/Minimap/MinimapWidget.MinimapWidget
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -1572,7 +1665,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Regatta/Textures
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Regatta
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1580,12 +1673,13 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta/Textures/WoodenPlanks
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Minimap
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Regatta/Textures/WoodenPlanks
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Gamemodes
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserTab1.SourcesExpanded=True
@@ -1613,22 +1707,29 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 GlobalAssetPicker.ThumbnailSize=2
 GlobalAssetPicker.CurrentViewType=0
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem1=/Game/Blueprints/Regatta/RegattaUI
-MRUItem2=/Game/Blueprints/Regatta/BPRegatta
-MRUItem3=/Game/Blueprints/Gamemodes/RegattaTesting
-MRUItem4=/Game/Blueprints/Regatta/Textures/RedPlastic
-MRUItem5=/Game/Levels/LVTesting
-MRUItem6=/Game/Blueprints/Regatta/Textures/WoodenPlanks/WoodenPlanks
-MRUItem7=/Game/Assets/MWaterPlaceholder
+MRUItem0=/Game/Minimap/sailboatIcon
+MRUItem1=/Game/Minimap/sailboatIcon_Sprite
+MRUItem2=/Game/Minimap/MinimapWidget
+MRUItem3=/Game/Minimap/MinimapMaterial
+MRUItem4=/Game/Minimap/BoatMinimapTextureRenderTarget2D
+MRUItem5=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem6=/Game/Blueprints/Regatta/RegattaUI
+MRUItem7=/Game/Blueprints/Regatta/BPRegatta
+MRUItem8=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem9=/Game/Blueprints/Regatta/Textures/RedPlastic
+MRUItem10=/Game/Levels/LVTesting
+MRUItem11=/Game/Blueprints/Regatta/Textures/WoodenPlanks/WoodenPlanks
+MRUItem12=/Game/Assets/MWaterPlaceholder
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Regatta/BPRegatta.BPRegatta;
 RecentlyPlaced=/Game/Blueprints/Regatta/Textures/WoodenPlanks/Planks033B_2K-JPG_Color_Mat.Planks033B_2K-JPG_Color_Mat;
 RecentlyPlaced=/Game/Blueprints/Regatta/Textures/WoodenPlanks/Planks033B_2K-JPG_Color.Planks033B_2K-JPG_Color;
 RecentlyPlaced=/Game/Blueprints/Regatta/Textures/WoodenPlanks/Planks033B.Planks033B;
-RecentlyPlaced=/Game/Blueprints/Regatta/BPRegatta.BPRegatta;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Assets/MWaterPlaceholder.MWaterPlaceholder;
@@ -1647,6 +1748,9 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 /Game/Blueprints/Regatta/Textures/WoodenPlanks/WoodenPlanks.WoodenPlanks=0
 /Game/Blueprints/Regatta/Textures/RedPlastic.RedPlastic=0
 /Game/Blueprints/Regatta/RegattaUI.RegattaUI=0
+/Game/Minimap/MinimapMaterial.MinimapMaterial=1
+/Game/Minimap/sailboatIcon.sailboatIcon=0
+/Game/Minimap/MinimapWidget.MinimapWidget=0
 
 [MaterialEditor]
 PrimType=1
@@ -1821,6 +1925,8 @@ StaticMeshActor.Collision=True
 BPRegatta_C.Actor=True
 BPRegatta_C.Replication=True
 WorldSettings.Lightmass=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Rendering=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1849,8 +1955,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -1880,9 +1986,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=0.667 Y=0.667
-WindowSize=X=1276.000 Y=668.000
-InitiallyMaximized=False
+ScreenPosition=X=0.000 Y=0.667
+WindowSize=X=1276.000 Y=670.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1898,7 +2004,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/micha/Desktop/SCHOOL/y3/TIS/sailing-simulator/Unreal Engine/Sailing/Content/Levels
+UNR=../../../../../../Users/alzbe/OneDrive/Dokumenty/GitHub/sailing-simulator/Unreal Engine/Sailing/Content/Levels
 BRUSH=C:/Users/micha/Desktop/SCHOOL/UNIVERZITA/3 rok/tis/sailing-simulator/Unreal Engine/Sailing/Content/
 FBX=C:/Users/micha/Desktop/SCHOOL/UNIVERZITA/3 rok/tis/sailing-simulator/Unreal Engine/Sailing/Content/
 FBXAnim=C:/Users/micha/Desktop/SCHOOL/UNIVERZITA/3 rok/tis/sailing-simulator/Unreal Engine/Sailing/Content/
@@ -3111,16 +3217,17 @@ Results=None
 Audio=False
 Editor=False
 Input=False
-Lists=True
-Misc=True
-Optimization=True
-Panel=True
-Primitive=True
-Special Effects=True
-Synth=True
-Uncategorized=True
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+Uncategorized=False
 User Created=False
-Advanced=True
+Advanced=False
+Common=False
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
