Additional Cameras now work
1-9 extra cameras "c" is back to chase camera

--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -302,7 +302,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.ActionMappings.Extra Camera Swapping,InputSettings.Bindings.ActionMappings.Swap To Chase Camera,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis,InputSettings.Bindings.AxisMappings.Sail Tension Axis
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 BoxComponent=
-BPRegatta_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+BPRegatta_C=
 PropertyWrapper=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
 SceneComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
@@ -372,7 +372,7 @@ GameplayTagsDeveloperSettings=EnhancedInputDeveloperSettings.Modifier Default Va
 LogVisualizerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RudderControls,InputSettings.Bindings.ActionMappings.Rudder Controls,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RudderControls,InputSettings.Bindings.AxisMappings.RudderAxis,InputSettings.Bindings.AxisMappings.Rudder Axis
 StaticMeshActor=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 RegattaUI_C=
-BPRegattaController_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras
+BPRegattaController_C=
 K2Node_GetInputAxisValue=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_InputAxisEvent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 K2Node_CallFunction=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
@@ -401,7 +401,7 @@ calculateAndSetNewMovementVector=StaticMeshComponent.Collision.Collision,BoxComp
 setNewMovementVector=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision
 addTorque=
 addTorque_9=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4
-CameraComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Reflections,CameraComponent.PostProcess.Reflections|Lumen Reflections,CameraComponent.PostProcess.Reflections|Screen Space Reflections,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ray Tracing Translucency,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components
+CameraComponent=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.19C32BB94E9FDFBE2DA5C58BCC041FF4,K2Node_VariableGet.DefaultValueCategory.Camera Active Staus,K2Node_VariableGet.DefaultValueCategory.Cameras,K2Node_VariableSet.DefaultValueCategory.Cameras,PropertyWrapper.DefaultValueCategory.Camera Active Staus,PropertyWrapper.DefaultValueCategory.Cameras,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
 
 [EditorStartup]
 LastLevel=/Game/Levels/LVTesting
@@ -657,9 +657,9 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 BPRegatta_C=
 Pawn=
-BPRegattaController_C="\"Object.Camera Active Staus\" "
-PlayerController="\"Object.Camera Active Staus\" "
-Controller="\"Object.Camera Active Staus\" "
+BPRegattaController_C=
+PlayerController=
+Controller=
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 
@@ -1812,12 +1812,12 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Map/PhysicsEngine
+MRUItem0=/Game/Blueprints/Regatta/BPRegatta
 MRUItem1=/Game/Blueprints/Gamemodes/RegattaTesting
-MRUItem2=/Game/Blueprints/Regatta/BPRegatta
-MRUItem3=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem4=/Game/Map/BP_Tile
-MRUItem5=/Game/Map/MapGenerator
+MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem3=/Game/Map/BP_Tile
+MRUItem4=/Game/Map/MapGenerator
+MRUItem5=/Game/Map/PhysicsEngine
 MRUItem6=/Game/Levels/LVTesting
 MRUItem7=/Game/Map/BP_Buoy
 MRUItem8=/Game/Map/tutorial_tabel
@@ -2071,8 +2071,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
