--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,6 @@ MRUItem2=/Game/Levels/MainMenuMap
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -1752,6 +1751,8 @@ K2Node_CustomEvent.Inputs=True
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
@@ -1764,8 +1765,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1781,7 +1780,7 @@ OpenAssetsAtExit=/Game/Map/Materials/M_Line.M_Line
 OpenAssetsAtExit=/Game/Map/BP_Start.BP_Start
 OpenAssetsAtExit=/Game/Map/BP_Buoy.BP_Buoy
 OpenAssetsAtExit=/Game/Blueprints/Regatta/BPRegattaController.BPRegattaController
-OpenAssetsAtExit=/Game/Levels/LVTesting.LVTesting:PersistentLevel.LVTesting
+OpenAssetsAtExit=/Game/Map/PhysicsEngine.PhysicsEngine
 
 [MessageLog]
 LastLogListing=PIE
@@ -1847,21 +1846,21 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem1=/Game/Map/BP_Buoy
-MRUItem2=/Game/Map/BP_Start
-MRUItem3=/Game/Map/Materials/M_Line
-MRUItem4=/Game/Map/tutorial_tabel
-MRUItem5=/Game/Map/tutorialStracture
-MRUItem6=/Game/Map/Materials/M_Line_Instance
-MRUItem7=/Game/Map/Materials/M_BuoyBody
-MRUItem8=/Game/Map/Materials/M_Glow
-MRUItem9=/Game/Map/PhysicsEngine
-MRUItem10=/Game/Blueprints/Regatta/BPRegatta
-MRUItem11=/Game/Blueprints/Gamemodes/RegattaTesting
-MRUItem12=/Game/Map/BP_Tile
-MRUItem13=/Game/Map/MapGenerator
-MRUItem14=/Game/Levels/LVTesting
+MRUItem0=/Game/Map/PhysicsEngine
+MRUItem1=/Game/Levels/LVTesting
+MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem3=/Game/Map/BP_Buoy
+MRUItem4=/Game/Map/BP_Start
+MRUItem5=/Game/Map/Materials/M_Line
+MRUItem6=/Game/Map/tutorial_tabel
+MRUItem7=/Game/Map/tutorialStracture
+MRUItem8=/Game/Map/Materials/M_Line_Instance
+MRUItem9=/Game/Map/Materials/M_BuoyBody
+MRUItem10=/Game/Map/Materials/M_Glow
+MRUItem11=/Game/Blueprints/Regatta/BPRegatta
+MRUItem12=/Game/Blueprints/Gamemodes/RegattaTesting
+MRUItem13=/Game/Map/BP_Tile
+MRUItem14=/Game/Map/MapGenerator
 MRUItem15=/Game/Levels/LV_Testing2
 MRUItem16=/Game/Levels/MainMenuMap
 MRUItem17=/Game/Minimap/MinimapWidget
@@ -2117,8 +2116,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
