--- a/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine/Sailing/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,6 +175,7 @@ MRUItem2=/Game/Levels/MainMenuMap
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -1751,11 +1752,11 @@ K2Node_CustomEvent.Inputs=True
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -1847,11 +1848,11 @@ AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Map/PhysicsEngine
-MRUItem1=/Game/Levels/LVTesting
-MRUItem2=/Game/Blueprints/Regatta/BPRegattaController
-MRUItem3=/Game/Map/BP_Buoy
-MRUItem4=/Game/Map/BP_Start
-MRUItem5=/Game/Map/Materials/M_Line
+MRUItem1=/Game/Blueprints/Regatta/BPRegattaController
+MRUItem2=/Game/Map/BP_Buoy
+MRUItem3=/Game/Map/BP_Start
+MRUItem4=/Game/Map/Materials/M_Line
+MRUItem5=/Game/Levels/LVTesting
 MRUItem6=/Game/Map/tutorial_tabel
 MRUItem7=/Game/Map/tutorialStracture
 MRUItem8=/Game/Map/Materials/M_Line_Instance
@@ -2116,8 +2117,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
